--- a/crud-maui-blazor/Component/_Imports.razor
+++ b/crud-maui-blazor/Component/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using NomeDoSeuProjeto
-@using NomeDoSeuProjeto.Components
+@using crud_maui_blazor
+@using crud_maui_blazor.Component
